--- a/ContasAPagar/Properties/Resources.resx
+++ b/ContasAPagar/Properties/Resources.resx
@@ -121,13 +121,16 @@
   <data name="bill (4)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bill (4).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bill (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bill (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="9049302a132dd7448288de6480539da1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9049302a132dd7448288de6480539da1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bill (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bill (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="9049302a132dd7448288de6480539da1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\9049302a132dd7448288de6480539da1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bill (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bill (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bill (5)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bill (5).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
