Implementação métodos de ler e salvar xml

--- a/ContasAPagar/Controller/MenuForm.resx
+++ b/ContasAPagar/Controller/MenuForm.resx
@@ -278,55 +278,55 @@
   </data>
   <data name="SaveXMLButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACdYAAAnWAWMp9VMAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAE6ElEQVR4Xu2bbUxbVRjHG+MnP/kSofQWZrKZzkwjykp50fbSshf6YtwUnTPbGOp4XTLndBuCYQE3
-        NAtuMuMHXRwQPmiybMwsBPbCGNuIg0UWScCYwZCoJCYki9mKLeV4n6en3W29G9Le23sbzz/5p+c85/Te
-        //nd3tOGcHVMTIsT5+Ae4wo4h97GFStp81ZzOj2lNpTiSElNsxk6BPsFE6Vtr7HfMlea9fT06spgNaQL
-        oSajQypp534nQJjJLMl8mMZQT0KgvuiAShsAeD7xEH53wR9Z2zwP0SiJl3D186QCKu0QAITwAT/B8/yD
-        NFJilcZztVIBlbYYAEJ4nx/V1eseoLESJ73V0CIVUGlHAwBbd1kHaazEyWAzfCEVUGlLAQDn78jvptES
-        I60BAOftyD9J4ykvLQLwNHlIbnXuMRpRWWkSgGB3k5vkVOc205jKSasAwO4DbmKptNTRqMpIywDArv0u
-        YqmwVNG48kvrAMBFHxfNZ1dkb6SR5VUyAAA7G52BrG1ZLhpbPqkGoHFxAMBr9q2dW1m+Mp9Gl0dqASjY
-        a5dc5EJeXb/a91xp9rM0fvxSC4DpleX4fS+1yIW86qNVXuF2WEqXEJ/UAgB++s1nYroVwI5ax1/mEhn+
-        oKImALDRkU5M601kxYYVi7ZpnekoXUbsUhtAPIbsdBmxiwFgABgABkDq4MlgBoABYAAYALqM2MUAMAAM
-        wD0BlNa+Ra7/fB197GRruG7gOdJ9qTs85ip3kZpDH4b7YEdpYcSxwGcGzobHe66cwdobuzaSoZEhNJwv
-        +j33s+IAMgqXkPGpcQKan58PLwqChjT40yACaelooZWgDrUdjjiWfaudjgQ1NT2F9erG7bRCyJ7mPRHv
-        WciKAwC/XfcOjUfIqd7vsTY8Noz9QCBAisqcWIsGcOPXGxHHOfjNQToSVNIAAA8MD2BA+BQc+KoJ26Bv
-        u74LzwkBACg+nw/b1s228PjILyNYm/17Fl+TCgBcZVi8WHe8d8jzr2aF54g/Aed/OI+vTV834ZhlQw72
-        AczlH69gO6kAgI/3HKcxg2pu/SxiXAwANkQQbHYw1vBlA/Z7LveQvsE+bCcdgN6rvTRmUK2dbRHjYgC2
-        LTzxznqxDVcfdngQLDbUTioAm3ZvohEJ8c/58XUuMIc7e2iOGADc+6f7TmP7SMcR3Bfg3jc5TWR0fBTr
-        SQMg3Z5BxibGMKDP7yeVDVXYBvVfuxSeJwbgLHeSsvoybIeAdfV34bzJ3yexnzQAaj+vo/EIaT/VjrX+
-        a/20QsjmvVuwJgbw8vZ1ZOmaZeS29zatEFK+rwLnTf85jX0pACfOnkAIYmeuz8R5UlYcwHL3U2Tm1gyG
-        g6sP9zPUPVUvYQ008dtNsqTwiX8BgHmd5zqxD98Yy9Y+ibX7AZBS6FhSVhwAhLs4dBENP2TEY7AJhsZe
-        2/k62fnpe+F+aG+AOvQPt9/9VQhQoAbfKtAvfreYXLh64Z4uKLm7z0RbcQBaNwPAADAADABdRuxiABiA
-        /zkAtf5dXg5DdrqM2KXWAxPyOK2GLiN2qfXIjBxO5bkcuoz4JJDslTqBli3c/+do/PjF8ZxROOjN6JNo
-        2BNGu5Gj8eVRal5qSpqNaxcOnpAHJ2O0kI1r07+of5zGll/GXOOjiXh0drGGTBkvZDxCYzIx/SfpdP8A
-        YqJJkHIFd4EAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAJ
+        1AAACdQBHNc22gAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAToSURBVHhe7Ztt
+        TFtVGMcb4yc/+RKh9BZmspnOTCPKSnnR9tKyF/pi3BSdM9sY6nhdMud0G4JhATc0C24y4wddHBA+aLJs
+        zCwE9sIY24iDRRZJwJjBkKgkJiSL2Yot5Xifp6fdbb0b0t7bexvPP/mn5zzn9N7/+d3e04ZwdUxMixPn
+        4B7jCjiH3sYVK2nzVnM6PaU2lOJISU2zGToE+wUTpW2vsd8yV5r19PTqymA1pAuhJqNDKmnnfidAmMks
+        yXyYxlBPQqC+6IBKGwB4PvEQfnfBH1nbPA/RKImXcPXzpAIq7RAAhPABP8Hz/IM0UmKVxnO1UgGVthgA
+        QnifH9XV6x6gsRInvdXQIhVQaUcDAFt3WQdprMTJYDN8IRVQaUsBAOfvyO+m0RIjrQEA5+3IP0njKS8t
+        AvA0eUhude4xGlFZaRKAYHeTm+RU5zbTmMpJqwDA7gNuYqm01NGoykjLAMCu/S5iqbBU0bjyS+sAwEUf
+        F81nV2RvpJHlVTIAADsbnYGsbVkuGls+qQagcXEAwGv2rZ1bWb4yn0aXR2oBKNhrl1zkQl5dv9r3XGn2
+        szR+/FILgOmV5fh9L7XIhbzqo1Ve4XZYSpcQn9QCAH76zWdiuhXAjlrHX+YSGf6goiYAsNGRTkzrTWTF
+        hhWLtmmd6ShdRuxSG0A8hux0GbGLAWAAGAAGQOrgyWAGgAFgABgAuozYxQAwAAzAPQGU1r5Frv98HX3s
+        ZGu4buA50n2pOzzmKneRmkMfhvtgR2lhxLHAZwbOhsd7rpzB2hu7NpKhkSE0nC/6Pfez4gAyCpeQ8alx
+        Apqfnw8vCoKGNPjTIAJp6WihlaAOtR2OOJZ9q52OBDU1PYX16sbttELInuY9Ee9ZyIoDAL9d9w6NR8ip
+        3u+xNjw2jP1AIECKypxYiwZw49cbEcc5+M1BOhJU0gAADwwPYED4FBz4qgnboG+7vgvPCQEAKD6fD9vW
+        zbbw+MgvI1ib/XsWX5MKAFxlWLxYd7x3yPOvZoXniD8B5384j69NXzfhmGVDDvYBzOUfr2A7qQCAj/cc
+        pzGDam79LGJcDAA2RBBsdjDW8GUD9nsu95C+wT5sJx2A3qu9NGZQrZ1tEeNiALYtPPHOerENVx92eBAs
+        NtROKgCbdm+iEQnxz/nxdS4whzt7aI4YANz7p/tOY/tIxxHcF+DeNzlNZHR8FOtJAyDdnkHGJsYwoM/v
+        J5UNVdgG9V+7FJ4nBuAsd5Ky+jJsh4B19XfhvMnfJ7GfNABqP6+j8QhpP9WOtf5r/bRCyOa9W7AmBvDy
+        9nVk6Zpl5Lb3Nq0QUr6vAudN/zmNfSkAJ86eQAhiZ67PxHlSVhzAcvdTZObWDIaDqw/3M9Q9VS9hDTTx
+        202ypPCJfwGAeZ3nOrEP3xjL1j6JtfsBkFLoWFJWHACEuzh0EQ0/ZMRjsAmGxl7b+TrZ+el74X5ob4A6
+        9A+33/1VCFCgBt8q0C9+t5hcuHrhni4oubvPRFtxAFo3A8AAMAAMAF1G7GIAGID/OQC1/l1eDkN2uozY
+        pdYDE/I4rYYuI3ap9ciMHE7luRy6jPgkkOyVOoGWLdz/52j8+MXxnFE46M3ok2jYE0a7kaPx5VFqXmpK
+        mo1rFw6ekAcnY7SQjWvTv6h/nMaWX8Zc46OJeHR2sYZMGS9kPEJjMjH9J+l0/wBiokmQcgV3gQAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="ReadButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAdcAAAHXAYySCGgAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAELklEQVR4Xu2bWWgTURSGo2/67KPPkkSbaazWfUHUBzdEcUNUqAsi4r4h7qigqEXBBxFRFAVxA8V9
-        KSpuySRRu9iqMdWqTY22VdsmaZsc55zcGWfSwQrTTmfg/vCTmTN3Zv755ubem4c4/ldiXl5Pv+A+6BOc
-        NX7BBSa63i84b4o5zhwWxXyBw9FdClKUFcxsJ/yevlNYJHPl97hm6wTqCid9HudkFss8SQAKdcJ0lZMv
-        BOckFs0ciR7XUZ0gXemkqV8HCwJAmwfBogDQ5kCwMAB05w+MFgeA7lwINgCA7jwINgGA7hwINgKAjvu9
-        rrEsesfIZgAAf6+IeX16sfjGZTcAaFFwL2XxjcuOAKRecJjFNy5b9gApM4tvXBwAB8ABcAB6N7GyOQAO
-        gAPgAFh84+IAOAAOoF0AoVFDwZ/r1tREbz94OWa4piY7MLg/+L1929SDw/Lb1NChkYNBzMvRPaZnUwFU
-        7t4BkE7Dj5vX/9alh/v57AlAKgXhjWs17d+tXAapRAKSX7/Qg8n171evACp25ZKmfcWSAki3tkJjWamm
-        /i+bCqD61AkKjors3Eq1qsOHWAWgqvCApn3tnVvsCEDlzm1UC44YRA+JSre0QCA/V2mvvpY4UFDq/7Kp
-        APAtJqPVFDDV2Ajh9ash3dxM+/EPYQgM8mraxysjdAxVV3SfauENa1glo7I5M5T2n48UsqpFAaDLC+ZR
-        d1cL32jZ3JmadoF8L6RTmTeNSjU10duWu78suSehbQEAHT19ksXMCINnt0Eg2Xq7bDE0x76xvYxqzp9T
-        zrENgHerlrOYGb1ZMLdNm8iOLeyoJGngRP0OBuiTJNdehZRzbAEAp8HmWIzFzChR9QmCQwdo2tWcPUPH
-        Uok4/HrxnLbVqn/8kD5T8ThNo3iOLQDUFT1gEfEhHrEtaUq7fFHT7pfoo3pD8Wv4tH8vbcvCAVPdQ4qn
-        TqRzLA+gctd2Fg+g9u5tWhCpIbxft0pp21JXR7XYpQvweuJ42pYVPXMKSmdPZ3sA4U3r6Bw1gI97dtEA
-        WTJtsnJNPZsGAKe41oYGCpesrqb5HOuvxo2Glvp6quMAhzVcFcr6uG8P1eKRD6wCULF0Eb1hXAegvh4/
-        Rm3U6wBZON2q1wrZNg2AOMBDD4Eru/KC+Zpj79esoCmvoaQ401Z6uKaKcqkX1NLbx1pk22aaLn+/DCpL
-        3R83rlENz8f98oULFCiy8J7yGKFn0wCgEYJ6Sat2aPSwdtfw2QMlmn4rqPZDI4cQNPKEce1e01QAVjQH
-        wAFwABwAi29cHAAHwAFwAHo3sbI5AA6AA+AAWHzj4gA4AA6AA9C7iZXdoQAs9sfJ//UhFt+4fIJrls4N
-        LG0x1z2DxTeuzJ+n3Q/0bmRR35Myd2PxO0ZPh/Tu4RPcB6SLR7NuZiVHpa/rfszKYrcjh+MPYpnkDXPm
-        9zcAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAQuSURBVHhe7ZtZ
+        aBNRFIajb/rso8+SRJtprNZ9QdQHN0RxQ1SoCyLiviHuqKCoRcEHEVEUBXEDxX0pKm7JJFG72Kox1apN
+        jbZV2yZpmxznnNwZZ9LBCtNOZ+D+8JOZM3dm/vnm5t6bhzj+V2JeXk+/4D7oE5w1fsEFJrreLzhvijnO
+        HBbFfIHD0V0KUpQVzGwn/J6+U1gkc+X3uGbrBOoKJ30e52QWyzxJAAp1wnSVky8E5yQWzRyJHtdRnSBd
+        6aSpXwcLAkCbB8GiANDmQLAwAHTnD4wWB4DuXAg2AIDuPAg2AYDuHAg2AoCO+72usSx6x8hmAAB/r4h5
+        fXqx+MZlNwBoUXAvZfGNy44ApF5wmMU3Llv2ACkzi29cHAAHwAFwAHo3sbI5AA6AA+AAWHzj4gA4AA6g
+        XQChUUPBn+vW1ERvP3g5ZrimJjswuD/4vX3b1IPD8tvU0KGRg0HMy9E9pmdTAVTu3gGQTsOPm9f/1qWH
+        +/nsCUAqBeGNazXt361cBqlEApJfv9CDyfXvV68AKnblkqZ9xZICSLe2QmNZqab+L5sKoPrUCQqOiuzc
+        SrWqw4dYBaCq8ICmfe2dW+wIQOXObVQLjhhED4lKt7RAID9Xaa++ljhQUOr/sqkA8C0mo9UUMNXYCOH1
+        qyHd3Ez78Q9hCAzyatrHKyN0DFVXdJ9q4Q1rWCWjsjkzlPafjxSyqkUBoMsL5lF3VwvfaNncmZp2gXwv
+        pFOZN41KNTXR25a7vyy5J6FtAQAdPX2SxcwIg2e3QSDZertsMTTHvrG9jGrOn1POsQ2Ad6uWs5gZvVkw
+        t02byI4t7KgkaeBE/Q4G6JMk116FlHNsAQCnweZYjMXMKFH1CYJDB2ja1Zw9Q8dSiTj8evGcttWqf/yQ
+        PlPxOE2jeI4tANQVPWAR8SEesS1pSrt8UdPul+ijekPxa/i0fy9ty8IBU91DiqdOpHMsD6By13YWD6D2
+        7m1aEKkhvF+3SmnbUldHtdilC/B64njalhU9cwpKZ09newDhTevoHDWAj3t20QBZMm2yck09mwYAp7jW
+        hgYKl6yupvkc66/GjYaW+nqq4wCHNVwVyvq4bw/V4pEPrAJQsXQRvWFcB6C+Hj9GbdTrAFk43arXCtk2
+        DYA4wEMPgSu78oL5mmPv16ygKa+hpDjTVnq4popyqRfU0tvHWmTbZpouf78MKkvdHzeuUQ3Px/3yhQsU
+        KLLwnvIYoWfTAKARgnpJq3Zo9LB21/DZAyWafiuo9kMjhxA08oRx7V7TVABWNAfAAXAAHACLb1wcAAfA
+        AXAAejexsjkADoAD4ABYfOPiADgADoAD0LuJld2hACz2x8n/9SEW37h8gmuWzg0sbTHXPYPFN67Mn6fd
+        D/RuZFHfkzJ3Y/E7Rk+H9O7hE9wHpItHs25mJUelr+t+zMpityOH4w9imeQNc+b3NwAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
